--- a/styles/style.css
+++ b/styles/style.css
@@ -3,25 +3,26 @@
     padding: 0px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 600;
-
 }
 
 body {
     background-color: rgb(245, 245, 245);
+    margin: 10% auto;
+    max-width: 1150px;
 }
 
 .bn {
     display: flex;
     justify-content: center;
     margin-top: 8%;
-    margin-left: 345px;
-    margin-right: 395px;
+    /* margin-left: 345px;
+    margin-right: 395px; */
     border-radius: 15px;
     background-color: #fffefe;
-    gap: 78px;
+    gap: 75px;
     box-shadow: 1px 2px 10px 0.3px rgb(176, 176, 176);
     height: 707px;
-
+    
 }
 
 #mm {
@@ -40,7 +41,6 @@ body {
 
 .pic {
     border-radius: 15px 0px 0px 15px;
-
 }
 
 input[type="text"] {
@@ -60,8 +60,6 @@ input[type="password"] {
 .input-hover:hover {
 
     box-shadow: 1px 2px 10px 0.3px rgb(176, 176, 176);
-
-
 }
 
 .in {
@@ -71,7 +69,6 @@ input[type="password"] {
 .ch {
     margin-top: 30px;
     display: flex;
-
 }
 
 a {
@@ -81,7 +78,6 @@ a {
 
 span {
     margin-left: 10px;
-
 }
 
 .btn {
@@ -89,7 +85,6 @@ span {
     flex-direction: column;
     width: 80%;
     margin-right: auto;
-
 }
 
 .btn h5 {
@@ -131,15 +126,14 @@ span {
 }
 
 .content {
-    margin-top: 15%;
-    margin-left: 18%;
+    margin-top: 16%;
+    margin-left: 17%;
 
 
 }
 
 #chk {
     width: 30px;
-
 }
 
 h5 {
@@ -154,14 +148,12 @@ h5 {
 h5 span {
     background: #fff;
     padding: 0 10px;
-
 }
 
 h1 {
     margin-top: 20px;
     font-size: 45px;
     margin-left: 16px;
-
 }
 
 .in p {
